[package]
name = "egui_sdl2_platform"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A render-backend independant egui backend for sdl2"

[workspace]
members = ["examples/*"]

[dependencies]
sdl2 = { version = "^0.38", features = ["raw-window-handle"] }
egui = "^0.32"
epaint = "^0.32"
anyhow = "^1"
log = "^0.4"
open = { version = "^5", optional = true }
arboard = { version = "^3", optional = true }

[features]
platform_ext = ["open", "arboard"]
sdl2_unsafe_textures = ["sdl2/unsafe_textures"]
sdl2_gfx = ["sdl2/gfx"]
sdl2_mixer = ["sdl2/mixer"]
sdl2_image = ["sdl2/image"]
sdl2_ttf = ["sdl2/ttf"]
# SDL2 build features
sdl2_use-bindgen = ["sdl2/use-bindgen"]
sdl2_use-pkgconfig = ["sdl2/use-pkgconfig"]
sdl2_use-vcpkg = ["sdl2/use-vcpkg"]
sdl2_use-mac_framework = ["sdl2/use_mac_framework"]
sdl2_bundled = ["sdl2/bundled"]
sdl2_static-link = ["sdl2/static-link"]
