[package]
name = "egui_sdl2_platform"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A render-backend independant egui backend for sdl2"

[workspace]
members = ["examples/*"]

[dependencies]
sdl3 = { version = "^0.14", features = ["raw-window-handle"] }
egui = "^0.32"
epaint = "^0.32"
anyhow = "^1"
log = "^0.4"
open = { version = "^5", optional = true }
arboard = { version = "^3", optional = true }

[features]
platform_ext = ["open", "arboard"]
# sdl3_unsafe_textures = ["sdl3/unsafe_textures"]
# sdl3_gfx = ["sdl3/gfx"]
# sdl3_mixer = ["sdl3/mixer"]
# sdl3_image = ["sdl3/image"]
# sdl3_ttf = ["sdl3/ttf"]
# SDL3 build features
# sdl3_use-bindgen = ["sdl3/use-bindgen"]
# sdl3_use-pkgconfig = ["sdl3/use-pkgconfig"]
# sdl3_use-vcpkg = ["sdl3/use-vcpkg"]
# sdl3_use-mac_framework = ["sdl3/use_mac_framework"]
# sdl3_bundled = ["sdl3/bundled"]
# sdl3_static-link = ["sdl3/static-link"]
